--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-
+<!--
 <div class="col-12">
   <div class="row">
     <div class="col-9">
@@ -9,4 +9,5 @@
       <app-featured-list></app-featured-list>
     </div>
   </div>
-</div>
+</div> -->
+<app-parent></app-parent>
