--- a/src/app/components/featured-list/featured-list.component.html
+++ b/src/app/components/featured-list/featured-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12">
     <div class="row">
-      <h2 class="m-5 text-dark"><u>Featured List</u></h2>
+      <h2 class="m-5 text-dark">Most Popular</h2>
     </div>
 
     <div *ngFor="let featureProduct of featureProducts">
