--- a/src/app/components/featured-list/featured-list.component.html
+++ b/src/app/components/featured-list/featured-list.component.html
@@ -4,20 +4,27 @@
       <h2 class="m-5 text-dark">Most Popular</h2>
     </div>
 
-    <div *ngFor="let featureProduct of featureProducts">
-      <div class="col">
-        <div class="card mb-5 ml-2" style="width: 18rem">
-          <img
-            [src]="featureProduct.imagePath"
-            class="rounded-circle p-3"
-            alt="image"
-          />
-          <div class="card-body">
-            <h4 class="card-title">{{ featureProduct.title }}</h4>
-            <h4 class="card-text float-left text-info">
-              {{ featureProduct.price }} LKR
-            </h4>
-            <a href="#" class="btn btn-danger float-right">Add to cart</a>
+    <div class="row">
+      <div *ngFor="let featureProduct of featureProducts">
+        <div class="col">
+          <!-- used a variable/function to [ngClasss] == getCardColor(featureProduct.price)-->
+          <div
+            class="card mb-5 ml-2"
+            [ngClass]="getCardColor(featureProduct.price)"
+            style="width: 18rem"
+          >
+            <img
+              [src]="featureProduct.imagePath"
+              class="rounded-circle p-3"
+              alt="image"
+            />
+            <div class="card-body">
+              <h4 class="card-title">{{ featureProduct.title }}</h4>
+              <h4 class="card-text float-left text-danger">
+                {{ featureProduct.price }} LKR
+              </h4>
+              <a href="#" class="btn btn-danger float-right">Add to cart</a>
+            </div>
           </div>
         </div>
       </div>
