--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -9,5 +9,21 @@
         <app-product [product]="product"></app-product>
       </div>
     </div>
+
+    <!-- <div class="row">
+      <div class="col-12">
+        <div class="card mb-5 bg-lite" *ngFor="let post of postList">
+          <div class="card-body">
+            <h5 class="card-title">{{ post.title }}</h5>
+
+            <p class="card-text">
+              {{ post.body }}
+            </p>
+            <a href="#" class="card-link">Card link</a>
+
+          </div>
+        </div>
+      </div>
+    </div> -->
   </div>
 </div>
