--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,10 @@
     <app-featured-list></app-featured-list>
   </div>
 
+  <div *ngSwitchCase="'posts'">
+    <app-posts></app-posts>
+  </div>
+
   <div *ngSwitchDefault></div>
 </div>
 
