--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,18 +15,21 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" (click)="changeRoute('')"
+        <a class="nav-link" href="#" (click)="changeRoute('posts')"
           >Home <span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="changeRoute('products')">Products</a>
+        <a class="nav-link" href="#" (click)="changeRoute('products')"
+          >Products</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" (click)="changeRoute('ft-products')"
+        <a class="nav-link" href="#" (click)="changeRoute('ft-products')"
           >Featured Products</a
         >
       </li>
+
       <li class="nav-item dropdown">
         <a
           class="nav-link dropdown-toggle"
