--- a/src/app/components/posts/posts/posts.component.html
+++ b/src/app/components/posts/posts/posts.component.html
@@ -1,6 +1,6 @@
-<!-- <div class="row"> -->
-<div class="col-8">
-  <div class="card m-5 bg-info text-light" *ngFor="let post of postList">
+<div class="col-3">
+  <h2 class="m-5">Posts</h2>
+  <div class="card m-5 bg-light text-dark" *ngFor="let post of postList">
     <div class="card-body">
       <h5 class="card-title">{{ post.title }}</h5>
 
@@ -11,4 +11,3 @@
     </div>
   </div>
 </div>
-<!-- </div> -->
