--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <!-- <p>header works!</p> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">FOOD STORE</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -15,14 +15,12 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#" (click)="changeRoute('posts')"
-          >Home <span class="sr-only">(current)</span></a
+        <a class="nav-link" href="#" (click)="changeRoute('products')"
+          >Products <span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="changeRoute('products')"
-          >Products</a
-        >
+        <a class="nav-link" href="#" (click)="changeRoute('posts')">Posts</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" (click)="changeRoute('ft-products')"
@@ -59,6 +57,10 @@
 
   <div *ngSwitchCase="'ft-products'">
     <app-featured-list></app-featured-list>
+  </div>
+
+  <div *ngSwitchCase="'posts'">
+    <app-posts></app-posts>
   </div>
 
   <div *ngSwitchDefault></div>
