--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,3 @@
-<app-header (routeChange)="goTo($event)"></app-header>
+<app-header></app-header>
 
-<!-- ng-switch -->
-<div [ngSwitch]="routePath">
-  <div *ngSwitchCase="'products'">
-    <app-product-list></app-product-list>
-  </div>
-
-  <div *ngSwitchCase="'ft-products'">
-    <app-featured-list></app-featured-list>
-  </div>
-
-  <div *ngSwitchCase="'posts'">
-    <app-posts></app-posts>
-  </div>
-
-  <div *ngSwitchDefault></div>
-</div>
-
-<!-- <div class="col-12">
-  <div class="row">
-    <div class="col-9">
-      <app-product-list></app-product-list>
-    </div>
-    <div class="col-3">
-      <app-featured-list></app-featured-list>
-    </div>
-  </div>
-</div> -->
-<!-- <app-parent></app-parent> -->
+<router-outlet></router-outlet>
