--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <!-- <p>header works!</p> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">FOOD STORE</a>
+  <a class="navbar-brand" href="#" routerLink="/product-list">FOOD STORE</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -15,17 +15,13 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#" (click)="changeRoute('products')"
-          >Products <span class="sr-only">(current)</span></a
-        >
+        <a class="nav-link" href="#" routerLink="/product-list">Products </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="changeRoute('posts')">Posts</a>
+        <a class="nav-link" href="#" routerLink="/posts">Posts</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="changeRoute('ft-products')"
-          >Featured Products</a
-        >
+        <a class="nav-link" href="#" routerLink="/ft-list">Featured Products</a>
       </li>
 
       <li class="nav-item dropdown">
@@ -37,11 +33,11 @@
           data-toggle="dropdown"
           aria-expanded="false"
         >
-          Dropdown link
+          About Us
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" routerLink="/parent">Parent</a>
+          <a class="dropdown-item" href="#" routerLink="/details">Details</a>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
@@ -50,7 +46,7 @@
 </nav>
 
 <!-- ng-switch -->
-<div [ngSwitch]="routePath">
+<!-- <div [ngSwitch]="routePath">
   <div *ngSwitchCase="'products'">
     <app-product-list></app-product-list>
   </div>
@@ -64,7 +60,7 @@
   </div>
 
   <div *ngSwitchDefault></div>
-</div>
+</div> -->
 
 <!-- <div class="col-9">
   <app-product-list></app-product-list>
