--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,6 +21,9 @@
         <a class="nav-link" href="#" routerLink="/posts">Posts</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#" routerLink="/pipes">Pipes</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#" routerLink="/ft-list">Featured Products</a>
       </li>
 
@@ -42,7 +45,7 @@
       </li>
     </ul>
 
-    <ul class="nav float-right" *ngIf="userName">
+    <ul class="navbar-nav ml-auto" *ngIf="userName">
       <li class="nav-item dropdown">
         <a
           class="nav-link dropdown-toggle"
