--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,68 +1,49 @@
 <!-- <p>header works!</p> -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#" routerLink="/product-list">FOOD STORE</a>
-  <button
-    class="navbar-toggler"
-    type="button"
-    data-toggle="collapse"
-    data-target="#navbarNavDropdown"
-    aria-controls="navbarNavDropdown"
-    aria-expanded="false"
-    aria-label="Toggle navigation"
-  >
+    <a class="navbar-brand" href="#" routerLink="/product-list">FOOD STORE</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#" routerLink="/product-list">Products </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" routerLink="/posts">Posts</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" routerLink="/pipes">Pipes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" routerLink="/ft-list">Featured Products</a>
-      </li>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#" routerLink="/product-list">Products </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" routerLink="/posts">Posts</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" routerLink="/pipes">Pipes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" routerLink="/ft-list">Featured Products</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" routerLink="/observable">Observables</a>
+            </li>
 
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdownMenuLink"
-          role="button"
-          data-toggle="dropdown"
-          aria-expanded="false"
-        >
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
           About Us
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" routerLink="/parent">Parent</a>
-          <a class="dropdown-item" href="#" routerLink="/details">Details</a>
-        </div>
-      </li>
-    </ul>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" routerLink="/parent">Parent</a>
+                    <a class="dropdown-item" href="#" routerLink="/details">Details</a>
+                </div>
+            </li>
+        </ul>
 
-    <ul class="navbar-nav ml-auto" *ngIf="userName">
-      <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          id="navbarDropdownMenuLink"
-          role="button"
-          data-toggle="dropdown"
-          aria-expanded="false"
-        >
+        <ul class="navbar-nav ml-auto" *ngIf="userName">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
           {{ userName }}
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" (click)="logout()">LogOut</a>
-        </div>
-      </li>
-    </ul>
-  </div>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" (click)="logout()">LogOut</a>
+                </div>
+            </li>
+        </ul>
+    </div>
 </nav>
 
 <!-- ng-switch -->
