--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,6 +21,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" routerLink="/observable">Observables</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" routerLink="/reactive-form">Reactive Form</a>
+            </li>
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
