--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2 class="mt-5"> Student Registration Form</h2>
-    <form novalidate #f="ngForm">
+    <form novalidate #f="ngForm" (ngSubmit)="onSubmit()">
 
         <fieldset ngModelGroup="name">
             <div class="col-6">
