--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -22,6 +22,9 @@
                 <a class="nav-link" href="#" routerLink="/observable">Observables</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="#" routerLink="/template-driven-form">Template Driven Form</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#" routerLink="/reactive-form">Reactive Form</a>
             </li>
 
