--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,6 +27,15 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" routerLink="/reactive-form">Reactive Form</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" routerLink="/reactive-form-v3">Reactive Form V3</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" routerLink="/invoice">Invoice</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" routerLink="/customer">Customers</a>
+            </li>
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
